Update main page

--- a/index.html
+++ b/index.html
@@ -3,9 +3,59 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>HSE TUTORIAL!?</title>
+    <link rel="stylesheet" href="fonts.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    Hello!!?
+    <details>
+      <summary>Details</summary>
+      Something small enough to escape casual notice.
+    </details>
+    <button>click me!</button>
+    <a href="about.html">about page</a>
+    <marquee behavior="alternate" direction="right">marquee!</marquee>
+    <h1>Трицератопс</h1>
+    <img src="triceratops.jpg" alt="Рендер трицератопса" width="600" />
+    <video src="vid-1.mp4" width="300" autoplay loop muted controls></video>
+    <h2>кто это</h2>
+    <h3>официальный статус</h3>
+    <p>
+      Lorem <b>ipsum</b> <i>dolor</i> <mark>sit</mark> amet consectetur,
+      adipisicing elit. Maxime eveniet ducimus nobis harum sapiente voluptas
+      consequatur doloribus ad, atque rerum quisquam dolorum soluta deleniti
+      enim ut iusto provident, suscipit labore!
+    </p>
+    <h3>неофициальный статус</h3>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci qui,
+      inventore maiores nemo culpa non laboriosam eius dolorem velit
+      consequatur, unde tenetur quos totam! Officiis veniam earum quia delectus
+      nobis.
+    </p>
+    <h2>как он жил</h2>
+    <p class="lifestory">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium vel
+      eius placeat non dolorem, aperiam voluptate cupiditate pariatur mollitia
+      quos, consectetur, adipisci veniam! Earum, non? Quos, sequi saepe! Atque,
+      ipsam?
+    </p>
+    <p class="lifestory">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi iure
+      veritatis neque ipsa perferendis officiis, et, est qui, voluptates dolor
+      dolorum quas. Culpa hic quaerat corrupti quidem facere quam recusandae!
+    </p>
+    <h2>преимущества</h2>
+    <ol>
+      <li>есть рога</li>
+      <li>толстые лапы</li>
+      <li>шипастый хвост</li>
+    </ol>
+    <h2>преимущества</h2>
+    <ul>
+      <li>есть рога</li>
+      <li>толстые лапы</li>
+      <li>шипастый хвост</li>
+    </ul>
   </body>
 </html>
