--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <nav>
+      <ul>
+        <li><a href="about.html">about</a></li>
+        <li><a href="colors.html">colors</a></li>
+        <li><a href="grid.html">grid</a></li>
+        <li><a href="layouts.html">layouts</a></li>
+        <li><a href="layouts-2.html">layouts 2</a></li>
+        <li><a href="positions-transitions.html">positions-transitions</a></li>
+      </ul>
+    </nav>
     <details>
       <summary>Details</summary>
       Something small enough to escape casual notice.
