Add infinite gradient page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="layouts.html">layouts</a></li>
         <li><a href="layouts-2.html">layouts 2</a></li>
         <li><a href="positions-transitions.html">positions-transitions</a></li>
+        <li><a href="infinite-gradient.html">infinite-gradient</a></li>
       </ul>
     </nav>
     <details>
